# KORA_Champion

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/architecture/: bedrock-live-provider-adapter.md  gpu-evidence-harness.md  (+8 more)
scripts/: check_provider_config.py  collect_gpu_snapshot.py  compare_synthetic_baseline.py  generate_routing_benchmark_fixture.py  normalize_bedrock_live_evidence.py  plan_gpu_benchmark.py  provider_dry_run.py  record_synthetic_evidence.py  remote_gpu_runtime_check.py  run_1m_scale_saturation_benchmark.py  run_gpu_micro_benchmark.py  run_gpu_routed_subset_benchmark.py  run_gpu_smoke_workload.py  run_multi_profile_routing_benchmark.py  run_provider_harness.py  run_routing_benchmark_comparison.py  run_smoke.py
tests/: test_1m_scale_saturation_benchmark.py  test_bedrock_live_adapter.py  test_cache.py  test_classifier.py  test_comparison.py  test_config.py  test_evidence.py  test_gpu_benchmark.py  test_gpu_metrics.py  test_gpu_micro_benchmark.py  test_gpu_routed_subset_benchmark.py  test_gpu_smoke_workload.py  test_harness.py  test_live_comparison.py  test_live_evidence.py  test_live_provider_adapter.py  test_multi_profile_routing_benchmark.py  test_openai_live_adapter.py  test_provider_adapter.py  test_provider_dry_run.py  test_provider_harness.py  test_provider_live_harness.py  test_router.py  test_routing_benchmark_comparison.py  test_routing_benchmark_metrics.py  test_routing_benchmark_oracle_independence.py  test_routing_benchmark_routers.py  test_routing_benchmark_schema.py  test_run_record.py  test_telemetry.py
(+181 files in other folders)
